--- a/fulltime.html
+++ b/fulltime.html
@@ -9,7 +9,7 @@
   :root{
     --bg:#0b0c11; --roof-dark:#151923; --roof-mid:#1f2531; --roof-glow:rgba(255,255,255,.08);
     --vs-gap:1.4cqw;
-    /* badge più grande */
+    /* titolo/macchia più grandi */
     --md-w: 86cqw;
     --md-splat-bleed: 3.2cqh;
     --fab-stack-gap: clamp(8px,1.6cqw,12px);
@@ -23,64 +23,31 @@
     container-type:size;
   }
 
-  /* video */
-  #bg-video{
-    position:absolute; inset:0; width:100%; height:100%; object-fit:cover; z-index:0;
-    filter:brightness(.32) contrast(1.05) saturate(1.05); background:#0b0c11;
-  }
+  /* video bg */
+  #bg-video{ position:absolute; inset:0; width:100%; height:100%; object-fit:cover; z-index:0;
+             filter:brightness(.32) contrast(1.05) saturate(1.05); background:#0b0c11; }
 
   /* overlay */
-  .stadium{
-    position:absolute; inset:0; z-index:1; pointer-events:none;
-    background:
-      radial-gradient(1200px 260px at 50% -40px, var(--roof-glow), transparent 60%),
-      linear-gradient(to bottom, rgba(31,37,49,.66), rgba(21,25,35,.78) 48%, rgba(6,16,7,.92));
-  }
+  .stadium{ position:absolute; inset:0; z-index:1; pointer-events:none;
+            background: radial-gradient(1200px 260px at 50% -40px, var(--roof-glow), transparent 60%),
+                        linear-gradient(to bottom, rgba(31,37,49,.66), rgba(21,25,35,.78) 48%, rgba(6,16,7,.92)); }
   .roof-stripes{ position:absolute; inset:0; z-index:2; pointer-events:none; display:block; }
 
-  .wrap{
-    position:absolute; inset:0; z-index:4;
-    display:grid; grid-template-rows:auto 1fr auto; align-items:center; justify-items:center;
-    padding: 4cqh 3cqw;
-  }
+  .wrap{ position:absolute; inset:0; z-index:4; display:grid; grid-template-rows:auto 1fr auto; align-items:center; justify-items:center; padding:4cqh 3cqw; }
 
-  /* titolo + macchia più grande */
-  .title-badge{
-    position:relative; width: var(--md-w); aspect-ratio: 5.3/1;
-    display:grid; place-items:center; overflow:visible; pointer-events:none;
-  }
-  .title-badge::before{
-    content:""; position:absolute; left:50%; top:50%; transform: translate(-50%,-50%);
-    width:100%; height: calc(100% + var(--md-splat-bleed) * 2);
-    background: url('md-splat.webp') center / contain no-repeat;
-    z-index:-1; pointer-events:none;
-    filter: drop-shadow(0 18px 44px rgba(0,0,0,.38));
-  }
-  .title{
-    color:#fff; font-weight:900; text-transform:uppercase; letter-spacing:.26cqw;
-    font-size: clamp(22px, 6cqw, 48px); text-align:center;
-  }
+  /* titolo + macchia ingranditi */
+  .title-badge{ position:relative; width:var(--md-w); aspect-ratio:5.3/1; display:grid; place-items:center; overflow:visible; pointer-events:none; }
+  .title-badge::before{ content:""; position:absolute; left:50%; top:50%; transform:translate(-50%,-50%);
+                        width:100%; height:calc(100% + var(--md-splat-bleed)*2);
+                        background:url('md-splat.webp') center/contain no-repeat;
+                        filter:drop-shadow(0 18px 44px rgba(0,0,0,.38)); z-index:-1; }
+  .title{ color:#fff; font-weight:900; text-transform:uppercase; letter-spacing:.26cqw; font-size:clamp(22px,6cqw,48px); text-align:center; }
 
-  .vs-block{ margin-top: 2.4cqh; width:100%; display:grid; gap:1.6cqh; }
+  .vs-block{ margin-top:2.0cqh; width:100%; display:grid; gap:1.0cqh; }
 
-  /* TEAM */
-  .team{
-    display:flex; align-items:center; gap: var(--vs-gap);
-    color:#fff; font-weight:900; text-transform:uppercase; letter-spacing:.18cqw;
-    font-size: clamp(18px, 2.8cqw, 28px);
-  }
-  .team .team-logo{ height: 8.6cqh; width:auto; object-fit:contain; display:block; }
-  .team-left{ justify-self:start; margin-left:6cqw; }
-  .team-right{ justify-self:end; margin-right:6cqw; }
-  .team.win{ filter: drop-shadow(0 6px 16px rgba(0,0,0,.35)); }
-  .team-right span{ order:1 }  /* nome prima del logo a destra */
-  .team-right img{ order:2 }
-
-  /* MIDLINE: marcatori sinistra | team1 | score | team2 | marcatori destra */
-  .midline{
-    display:grid; align-items:center; width:100%;
-    grid-template-columns: minmax(0,1fr) auto auto auto minmax(0,1fr);
-    gap: 1.2cqw;
+  /* DRAWER (marcatori) sopra/sotto */
+  .wing-row{
+    width:100%; display:grid;
   }
   .wing{
     background:rgba(255,255,255,.08); border-radius:14px;
@@ -88,36 +55,40 @@
     color:#e6ebf2; font-weight:600; font-size:clamp(12px,2.1cqw,16px);
     line-height:1.5; padding:.8cqh 1.1cqw;
     display:flex; flex-wrap:wrap; gap:.6cqw .9cqw; min-height:3.2cqh;
-    max-width:min(38cqw, 520px);
+    max-width:min(44cqw, 520px);
   }
-  .wing.left{ justify-content:flex-end; }
-  .wing.right{ justify-content:flex-start; }
+  #wingTop { justify-items:start; }
+  #wingTop .wing { justify-self:start; }   /* a sinistra */
+  #wingBottom { justify-items:end; }
+  #wingBottom .wing { justify-self:end; }  /* a destra  */
   .scorer{ display:inline-flex; align-items:center; gap:.35cqw; white-space:nowrap; }
   .scorer .ball{ transform:translateY(.02em); }
 
-  .score-center{
-    grid-column: 3; display:flex; align-items:center; gap:clamp(10px,2.2cqw,18px); color:#fff; justify-self:center;
+  /* BLOCCO CENTRALE: team1 (sopra) -> score -> team2 (sotto) */
+  .score-stack{
+    display:grid; align-items:center; justify-items:center;
+    grid-template-rows:auto auto auto; gap:1.2cqh;
+    width:100%;
   }
-  .score-num{
-    font-weight:900; letter-spacing:.18cqw; line-height:1;
-    font-size: clamp(46px, 11cqw, 104px);
-    filter: drop-shadow(0 8px 18px rgba(0,0,0,.35));
-  }
+
+  .team{ display:flex; align-items:center; gap:var(--vs-gap); color:#fff; font-weight:900; text-transform:uppercase; letter-spacing:.18cqw; font-size:clamp(18px,2.8cqw,28px); }
+  .team .team-logo{ height:8.6cqh; width:auto; object-fit:contain; display:block; }
+  .team-left{ justify-self:start; margin-left:6cqw; }
+  .team-right{ justify-self:end; margin-right:6cqw; }
+  .team.win{ filter: drop-shadow(0 6px 16px rgba(0,0,0,.35)); }
+  .team-right span{ order:1 }  /* nome prima del logo a destra */
+  .team-right img{ order:2 }
+
+  .score-center{ display:flex; align-items:center; gap:clamp(10px,2.2cqw,18px); color:#fff; }
+  .score-num{ font-weight:900; letter-spacing:.18cqw; line-height:1; font-size:clamp(46px,11cqw,104px); filter:drop-shadow(0 8px 18px rgba(0,0,0,.35)); }
   .dash{ font-weight:900; font-size:clamp(26px,5.6cqw,52px); opacity:.9; }
 
-  .meta{
-    margin-top: 1.2cqh; color:#cfd3dc; text-align:center; opacity:.95;
-    font-size: clamp(13px, 2.2cqw, 16px); letter-spacing:.06cqw;
-  }
+  .meta{ margin-top:1.0cqh; color:#cfd3dc; text-align:center; opacity:.95; font-size:clamp(13px,2.2cqw,16px); letter-spacing:.06cqw; }
 
-  .venue{
-    margin-top: 1.0cqh; display:inline-flex; align-items:center; gap:.6cqw; padding:.7cqh 1.2cqw;
-    border-radius:999px; background:rgba(255,255,255,.08);
-    box-shadow:0 0 0 1px rgba(255,255,255,.06) inset; white-space:nowrap; max-width:92cqw; overflow:hidden;
-  }
+  .venue{ margin-top:1.0cqh; display:inline-flex; align-items:center; gap:.6cqw; padding:.7cqh 1.2cqw; border-radius:999px;
+          background:rgba(255,255,255,.08); box-shadow:0 0 0 1px rgba(255,255,255,.06) inset; white-space:nowrap; max-width:92cqw; overflow:hidden; }
   .venue .pin{ filter:drop-shadow(0 1px 0 rgba(0,0,0,.25)); flex:0 0 auto; }
-  .venue a{ color:#e6ebf2; text-decoration:none; font-weight:700; letter-spacing:.04cqw; font-size:clamp(13px,2.2cqw,16px);
-            display:inline-block; overflow:hidden; text-overflow:ellipsis; max-width:calc(92cqw - 4cqw); }
+  .venue a{ color:#e6ebf2; text-decoration:none; font-weight:700; letter-spacing:.04cqw; font-size:clamp(13px,2.2cqw,16px); display:inline-block; overflow:hidden; text-overflow:ellipsis; max-width:calc(92cqw - 4cqw); }
   .venue a:hover{ text-decoration:underline; }
 
   /* FABs */
@@ -125,24 +96,19 @@
     --fab-size: clamp(36px, 10cqw, 48px);
     --fab-edge: clamp(10px, 2cqw, 16px);
     --fab-radius: 12px;
-
     position:absolute; top:var(--fab-edge); left:var(--fab-edge);
-    width:var(--fab-size); height:var(--fab-size);
-    display:grid; place-items:center;
-
-    border: 1px solid rgba(0,0,0,.08);
-    border-radius: var(--fab-radius);
+    width:var(--fab-size); height:var(--fab-size); display:grid; place-items:center;
+    border:1px solid rgba(0,0,0,.08); border-radius:var(--fab-radius);
     background:#fff; color:#111;
-    box-shadow: 0 2px 4px rgba(0,0,0,.18), 0 8px 16px rgba(0,0,0,.16);
+    box-shadow:0 2px 4px rgba(0,0,0,.18), 0 8px 16px rgba(0,0,0,.16);
     cursor:pointer; z-index:10;
-
-    transition: transform .15s ease, box-shadow .15s ease, background-color .15s ease, opacity .15s ease, border-color .15s ease;
+    transition:transform .15s ease, box-shadow .15s ease, background-color .15s ease, opacity .15s ease, border-color .15s ease;
   }
-  .fab:hover{ transform: translateY(-1px); background:#f5f6f8; box-shadow: 0 3px 6px rgba(0,0,0,.20), 0 12px 20px rgba(0,0,0,.18); }
-  .fab:active{ transform: translateY(0); background:#eceef2; }
-  .fab:focus-visible{ outline: 3px solid rgba(66,133,244,.55); outline-offset: 2px; }
+  .fab:hover{ transform:translateY(-1px); background:#f5f6f8; box-shadow:0 3px 6px rgba(0,0,0,.20), 0 12px 20px rgba(0,0,0,.18); }
+  .fab:active{ transform:translateY(0); background:#eceef2; }
+  .fab:focus-visible{ outline:3px solid rgba(66,133,244,.55); outline-offset:2px; }
   .fab[aria-busy="true"]{ pointer-events:none; opacity:.7 }
-  .fab svg{ width: calc(var(--fab-size) * .56); height: calc(var(--fab-size) * .56); }
+  .fab svg{ width:calc(var(--fab-size)*.56); height:calc(var(--fab-size)*.56); }
 
   .fab-ig{ top: calc(var(--fab-edge) + var(--fab-size) + var(--fab-stack-gap)); }
   .fab-wa{ top: calc(var(--fab-edge) + (var(--fab-size) + var(--fab-stack-gap)) * 2); }
@@ -160,7 +126,6 @@
     </video>
 
     <div class="stadium"></div>
-
     <svg class="roof-stripes" viewBox="0 0 1000 1778" preserveAspectRatio="none" aria-hidden="true">
       <defs>
         <pattern id="diag" patternUnits="userSpaceOnUse" width="44" height="44" patternTransform="rotate(-10)">
@@ -172,39 +137,39 @@
     </svg>
 
     <div class="wrap">
-      <!-- Titolo -->
-      <div class="title-badge">
-        <div class="title">Full Time</div>
-      </div>
+      <div class="title-badge"><div class="title">Full Time</div></div>
 
       <div class="vs-block">
-        <!-- Riga centrale con ali marcatori -->
-        <div class="midline">
-          <!-- Wing sinistra: marcatori S1 -->
-          <div class="wing left" id="wing1" hidden></div>
 
-          <!-- Team sinistro -->
+        <!-- drawer sopra (S1 a sinistra) -->
+        <div class="wing-row" id="wingTop">
+          <div class="wing" id="wing1" hidden></div>
+        </div>
+
+        <!-- blocco centrale: team1 / score / team2 -->
+        <div class="score-stack">
           <div class="team team-left">
             <img id="logo1" class="team-logo" alt="" />
             <span id="t1">—</span>
           </div>
 
-          <!-- SCORE -->
           <div class="score-center">
             <span class="score-num" id="s1">0</span>
             <span class="dash">–</span>
             <span class="score-num" id="s2">0</span>
           </div>
 
-          <!-- Team destro -->
           <div class="team team-right">
             <span id="t2">—</span>
             <img id="logo2" class="team-logo" alt="" />
           </div>
-
-          <!-- Wing destra: marcatori S2 -->
-          <div class="wing right" id="wing2" hidden></div>
         </div>
+
+        <!-- drawer sotto (S2 a destra) -->
+        <div class="wing-row" id="wingBottom">
+          <div class="wing" id="wing2" hidden></div>
+        </div>
+
       </div>
 
       <div class="meta" id="metaLine">—</div>
@@ -221,7 +186,6 @@
         <path d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7a3.2 3.2 0 000-1.39l7-4.11a2.5 2.5 0 10-.9-1.45l-7 4.11a2.5 2.5 0 100 4.07l7.05 4.14a2.5 2.5 0 101.94-2z"/>
       </svg>
     </button>
-
     <button id="igFab" class="fab fab-ig" title="Apri Instagram @asd_petriolese_calcio" aria-label="Apri Instagram @asd_petriolese_calcio">
       <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
         <rect x="3" y="3" width="18" height="18" rx="5" ry="5"></rect>
@@ -229,7 +193,6 @@
         <circle cx="17.5" cy="6.5" r="1.2"></circle>
       </svg>
     </button>
-
     <button id="waFab" class="fab fab-wa" title="Apri canale WhatsApp" aria-label="Apri canale WhatsApp">
       <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
         <path d="M20.5 11.9c0 4.73-3.86 8.56-8.62 8.56a8.6 8.6 0 0 1-4.46-1.26L3.5 20.5l1.37-3.8a8.52 8.52 0 0 1-1.0-3.8C3.87 8.18 7.73 4.35 12.49 4.35c4.76 0 8.02 3.83 8.02 7.55Z"/>
@@ -287,7 +250,7 @@ function readScore(meta){
 
 /* ====== INIT ====== */
 (async function init(){
-  // Social FABs
+  // socials
   document.getElementById('igFab').addEventListener('click', ()=>{
     const username='asd_petriolese_calcio';
     const web='https://www.instagram.com/asd_petriolese_calcio/';
@@ -298,7 +261,7 @@ function readScore(meta){
   }, {passive:true});
   document.getElementById('waFab').addEventListener('click', ()=>{ window.open('https://whatsapp.com/channel/0029Vb6QY82I7BeLPf1qXZ2E','_blank','noopener'); }, {passive:true});
 
-  // Share immagine
+  // share
   const shareBtn=document.getElementById('shareFab');
   shareBtn.addEventListener('click', async()=>{
     try{
@@ -321,7 +284,7 @@ function readScore(meta){
     finally{ shareBtn.removeAttribute('aria-busy'); }
   });
 
-  // Sheet
+  // sheet
   const [metaRows, oppRows] = await Promise.all([
     fetchCsvPrefer(SHEET_FILE_ID, META_GID, PUBLISHED_META_URL),
     fetchCsvPrefer(SHEET_FILE_ID, OPP_GID,  PUBLISHED_OPP_URL)
@@ -335,20 +298,20 @@ function readScore(meta){
   const dateStr =(meta.get('data')||meta.get('prossimadata')||meta.get('prossima_data')||'').toString().trim();
   const timeStr =(meta.get('ora') ||meta.get('prossimaora') ||meta.get('prossima_ora') ||'').toString().trim();
 
-  // Venue (squadra1) → AVVERSARI, poi Meta
+  // venue
   let venueMeta=(meta.get('luogo')||meta.get('campo')||meta.get('stadio')||meta.get('venue')||'').toString().trim();
   let venue=''; let lat=null, lon=null; let link='';
   const vRec=venuesM.get((squadra1||'').toLowerCase());
   if(vRec){ venue=vRec.venue||''; lat=vRec.lat; lon=vRec.lon; link=vRec.link||''; }
   if(!venue) venue=venueMeta;
 
-  // Nomi e loghi
+  // nomi/loghi
   document.getElementById('t1').textContent=squadra1||'—';
   document.getElementById('t2').textContent=squadra2||'—';
   setLogo(document.getElementById('logo1'), resolveLogoSrc(squadra1,opp), squadra1);
   setLogo(document.getElementById('logo2'), resolveLogoSrc(squadra2,opp), squadra2);
 
-  // Risultato
+  // risultato
   const {s1,s2}=readScore(meta);
   const s1El=document.getElementById('s1');
   const s2El=document.getElementById('s2');
@@ -358,14 +321,12 @@ function readScore(meta){
     else if(s2>s1) document.querySelector('.team-right').classList.add('win');
   }else{ s1El.textContent='—'; s2El.textContent='—'; }
 
-  // Marcatori → ali
+  // marcatori → drawer sopra/sotto
   const {list1,list2}=splitScorers(meta);
-  const w1=document.getElementById('wing1');
-  const w2=document.getElementById('wing2');
-  if(list1.length){ w1.innerHTML=renderWing(list1); w1.hidden=false; }
-  if(list2.length){ w2.innerHTML=renderWing(list2); w2.hidden=false; }
+  if(list1.length){ wing1.innerHTML=renderWing(list1); wing1.hidden=false; }
+  if(list2.length){ wing2.innerHTML=renderWing(list2); wing2.hidden=false; }
 
-  // Data/ora
+  // data/ora
   const dt=(function(dateStr,timeStr){
     const s=String(dateStr||'').trim(), t=String(timeStr||'').trim();
     if(!s) return null;
@@ -382,7 +343,7 @@ function readScore(meta){
   const metaLine=document.getElementById('metaLine');
   if(dt && !isNaN(+dt)) metaLine.textContent=formatWhen(dt); else metaLine.textContent='';
 
-  // Venue pill
+  // venue pill
   if(venue){
     const box=document.getElementById('venueBox');
     const a=document.getElementById('venueLink');
