--- a/lineup.html
+++ b/lineup.html
@@ -304,14 +304,7 @@
       padding: 0 1cqw;
     }
   }
-  /* Foto giocatori più piccole su mobile */
-@container (max-width: 520px){
-  :root{
-    --photo-h: 14cqh;   /* invece di 20cqh */
-    --badge-w: 12cqh;   /* badge proporzionati */
-    --badge-font: min(1.5cqh, 2cqw);
-  }
-}
+
   /* Fallback senza container queries */
   @supports not (width: 1cqw){
     @media (max-width: 520px){
@@ -322,6 +315,15 @@
       .versus-badge{ gap: 1.5vw; }
       .versus-badge .vs-text{ font-size: clamp(22px, 4.2vw, 36px); letter-spacing: .22vw; }
       .subs-badge{ width: 40vw; font-size: clamp(14px, 3.3vw, 20px); letter-spacing: .22vw; padding: 0 1vw; }
+    }
+  }
+
+  /* ===== Giocatori e badge più piccoli su mobile ===== */
+  @container (max-width: 520px){
+    :root{
+      --photo-h: 14cqh;                 /* prima 20cqh */
+      --badge-w: 12cqh;                 /* proporzione badge */
+      --badge-font: min(1.5cqh, 2cqw);  /* testo badge */
     }
   }
 </style>
@@ -414,17 +416,18 @@
         <circle cx="17.5" cy="6.5" r="1.2"></circle>
       </svg>
     </button>
-<!-- FAB WhatsApp -->
-<button id="waFab" class="fab-wa" title="Apri Canale WhatsApp" aria-label="Apri Canale WhatsApp">
-  <svg viewBox="0 0 24 24" aria-hidden="true">
-    <!-- BOLLA con CODINO (outline) -->
-    <circle cx="12" cy="12" r="9"></circle>
-    <!-- codino in basso a sinistra -->
-    <path d="M6.2 18.2 L4.1 20.1 L4.8 17.2" />
-    <!-- CORNETTA (classica) -->
-    <path d="M15.7 14.3c-.2.6-1.2 1.3-1.9 1.3s-1.9-.4-3.2-1.2c-1.3-.7-2.5-2.1-2.9-2.7-.4-.6-1.1-1.6-1.1-2.3s.4-1.1.6-1.3.5-.4.8-.4.6.1.8.2.5 1 .7 1.5c.2.4.2.6 0 .9-.1.2-.5.5-.6.7-.1.1-.2.3 0 .6.2.3 1 1.6 2.2 2.2 1.2.6 1.6.6 2 .4.3-.2.9-1 1.1-1.2.2-.2.4-.2.6-.1.2.1 1.6.7 1.9.9.2.1.3.2.3.3 0 .3-.1.7-.3 1z"/>
-  </svg>
-</button>
+
+    <!-- FAB WhatsApp -->
+    <button id="waFab" class="fab-wa" title="Apri Canale WhatsApp" aria-label="Apri Canale WhatsApp">
+      <svg viewBox="0 0 24 24" aria-hidden="true">
+        <!-- BOLLA con CODINO (outline) -->
+        <circle cx="12" cy="12" r="9"></circle>
+        <!-- codino in basso a sinistra -->
+        <path d="M6.2 18.2 L4.1 20.1 L4.8 17.2" />
+        <!-- CORNETTA (classica) -->
+        <path d="M15.7 14.3c-.2.6-1.2 1.3-1.9 1.3s-1.9-.4-3.2-1.2c-1.3-.7-2.5-2.1-2.9-2.7-.4-.6-1.1-1.6-1.1-2.3s.4-1.1.6-1.3.5-.4.8-.4.6.1.8.2.5 1 .7 1.5c.2.4.2.6 0 .9-.1.2-.5.5-.6.7-.1.1-.2.3 0 .6.2.3 1 1.6 2.2 2.2 1.2.6 1.6.6 2 .4.3-.2.9-1 1.1-1.2.2-.2.4-.2.6-.1.2.1 1.6.7 1.9.9.2.1.3.2.3.3 0 .3-.1.7-.3 1z"/>
+      </svg>
+    </button>
   </div>
 
 <script>
